# g-top

./: package-lock.json  package.json  vite.config.js
src/: App.css  App.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: active.rs  events.rs  main.rs  passive.rs  pstree.rs
src/modules/components/: Button.jsx  GenericGraph.jsx  Modal.css  Modal.jsx  PrioritySlider.jsx  button.css  cpuGraph.jsx  eventsTable.css  eventsTable.jsx  memGraph.jsx  priorityChangeModal.jsx  procChildrenTable.css  procChildrenTable.jsx  procGraph.jsx  processTable.jsx  styles.css  tree.jsx
