[package]
name = "the-process-manager"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
procfs = "0.9.1"
timer = "0.2.0"
chrono = "0.4.24"
sysinfo = "0.28.2"
rustix = {version = "0.37.3", features= ["process"] }
csv = "1.2.1"
libc = "0.2.93"
nix = "0.24.0"
psutil = "3.2.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
